[package]
name = "gigroom-signalling"
version = "0.1.0"
edition = "2021"
authors = ["Nirbheek Chauhan <nirbheek@centricular.com>"]
license = "Proprietary"
description = "GigRoom signalling server"
rust-version = "1.70"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.8"
http = "1"
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
rustls-pemfile = "2"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"

[[bin]]
name = "signalling-server"
path = "src/bin/server.rs"

[[bin]]
name = "echoclient-token-generator"
path = "src/bin/echoclient-token-generator.rs"
